# docling-ocr-mistral

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docling_ocr_mistral/: __init__.py  model.py  options.py  plugin.py
tests/: test_mistral_plugin.py
