[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docling-ocr-mistral"
version = "0.1.0"
description = "Mistral OCR plugin for Docling"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [{ name = "Georg Heiler" }]
keywords = ["docling", "ocr", "mistral", "plugin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "docling>=2.107.0,<3.0.0",
  "pillow>=10.0.0,<13.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "requests>=2.32.2,<3.0.0",
]

[project.entry-points.docling]
docling_ocr_mistral = "docling_ocr_mistral.plugin"

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.urls]
repository = "https://github.com/geoHeil/docling-ocr-mistral"
issues = "https://github.com/geoHeil/docling-ocr-mistral/issues"

[tool.hatch.build.targets.wheel]
packages = ["docling_ocr_mistral"]

[tool.pytest.ini_options]
testpaths = ["tests"]
